...
                                                <color key="backgroundColor" red="0.0" green="0.44262491790000003" blue="0.75477871190000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="44" id="Dx9-vl-7Su"/>
                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="361" id="hO0-ai-MXa"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                                <state key="normal" title="Sign Up">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <segue destination="tDc-dv-fkc" kind="show" id="Gvi-U7-vMd"/>
                                                </connections>
                                            </button>
...
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="43" id="AwG-qO-gBX"/>
                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="361" id="QJE-Oc-0vX"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                                <color key="tintColor" red="0.0" green="0.44262491790000003" blue="0.75477871190000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <state key="normal" title="Login">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <segue destination="sW6-0W-jwG" kind="show" id="w3H-c3-1Dh"/>
                                                </connections>
                                            </button>
...
                                            </label>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ggg-65-Oz1">
                                                <rect key="frame" x="278" y="525" width="75" height="30"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="30" id="XHs-bm-Xrh"/>
                                                </constraints>
                                                <state key="normal" title="Login Here"/>
                                                <connections>
                                                    <segue destination="sW6-0W-jwG" kind="show" id="nOC-74-6fP"/>
                                                </connections>
                                            </button>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder=" Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ddI-EA-ao9">
                                                <rect key="frame" x="19" y="181" width="341" height="41"/>
...
                                                <rect key="frame" x="30" y="395" width="339" height="42"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="339" id="KOd-mV-Pcz"/>
                                                    <constraint firstAttribute="height" constant="42" id="dn3-Qx-k1K"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <state key="normal" title="Forgot Password ?"/>
                                                <connections>
                                                    <action selector="ForgotPasswordTapped:" destination="sW6-0W-jwG" eventType="touchUpInside" id="UHS-FF-i5V"/>
                                                </connections>
                                            </button>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Don't have an account ?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="naE-7V-h1c">
                                                <rect key="frame" x="30" y="460" width="199" height="21"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="199" id="B45-jv-Z8y"/>
                                                    <constraint firstAttribute="height" constant="21" id="JYo-Ok-fLR"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                </constraints>
                                                <state key="normal" title="Skip"/>
                                                <connections>
                                                    <action selector="btnSkipToHome:" destination="sW6-0W-jwG" eventType="touchUpInside" id="NKk-r3-PoG"/>
                                                </connections>
                                            </button>
                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login" translatesAutoresizingMaskIntoConstraints="NO" id="KuP-cr-yAW">
                                                <rect key="frame" x="108" y="8" width="199" height="130"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="130" id="1KZ-GW-GHz"/>
                                                    <constraint firstAttribute="width" constant="199" id="bsh-Hk-E0f"/>
                                                </constraints>
                                            </imageView>
...
