//
//  L_T_A_S_Abenayaka_cobsccomp182p_008UITests.swift
//  L.T.A.S-Abenayaka-cobsccomp182p-008UITests
//
//  Created by Anjalee on 2/20/20.
//  Copyright © 2020 Anjalee Abenayaka. All rights reserved.
//

import XCTest

class L_T_A_S_Abenayaka_cobsccomp182p_008UITests: XCTestCase {

    override func setUp() {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() {
                // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        
     
        let app = XCUIApplication()
        let scrollViewsQuery = app.scrollViews
        let elementsQuery = scrollViewsQuery.otherElements
        let loginButton = elementsQuery.buttons["Login"]
        loginButton.tap()
        scrollViewsQuery.otherElements.containing(.image, identifier:"login").element.tap()
        elementsQuery.textFields[" Your Email"].tap()
        elementsQuery.secureTextFields[" Password"].tap()
        loginButton.tap()
        app.alerts["Error in Login"].buttons["Try Again"].tap()
        elementsQuery.buttons["Forgot Password ?"].tap()
        app.alerts["Forgot password?"].buttons["Cancel"].tap()
        elementsQuery.staticTexts["Don't have an account ?"].tap()
        elementsQuery.buttons["Sign Up "].tap()
        elementsQuery.buttons["Login Here"].tap()
    
        
    }

}
